--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,10 @@ jobs:
       run: ./gradlew assembleDebug
     
     - name: Upload APK Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: apks
-        path: android/app/build/outputs/apk/
+        path: android/app/build/outputs/apk/debug/app-debug.apk
     
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
