--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,25 +23,25 @@ jobs:
       uses: android-actions/setup-android@v2
     
     - name: Build Release APK
-      working-directory: ./android
+      working-directory: .
       run: |
-        chmod +x gradlew
+        chmod +x ./gradlew
         ./gradlew clean assembleRelease
     
     - name: Build Debug APK
-      working-directory: ./android
+      working-directory: .
       run: ./gradlew assembleDebug
     
     - name: Upload APK Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: apks
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
     
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: android/app/build/outputs/apk/**/*.apk
+        files: app/build/outputs/apk/**/*.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
