--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Normalize gradlew line endings (ensure LF)
+      run: tr -d '\r' < gradlew > gradlew.tmp && mv gradlew.tmp gradlew && chmod +x gradlew
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
