--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
 
     - name: Normalize gradlew line endings (ensure LF)
       run: tr -d '\r' < gradlew > gradlew.tmp && mv gradlew.tmp gradlew && chmod +x gradlew
+
+    - name: Regenerate Gradle wrapper on runner
+      run: gradle wrapper --gradle-version 8.1.1
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -28,7 +31,6 @@ jobs:
     - name: Build Release APK
       working-directory: .
       run: |
-        chmod +x ./gradlew
         ./gradlew clean assembleRelease
     
     - name: Build Debug APK
