Fix: Removed deprecated MaxPermSize and disabled daemon

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Normalize gradlew line endings (ensure LF)
-      run: tr -d '\r' < gradlew > gradlew.tmp && mv gradlew.tmp gradlew && chmod +x gradlew
-
-    - name: Regenerate Gradle wrapper on runner
-      run: gradle wrapper --gradle-version 8.1.1
+    - name: Install Gradle (system)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gradle
     
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -28,14 +27,14 @@ jobs:
     - name: Install Android SDK
       uses: android-actions/setup-android@v2
     
-    - name: Build Release APK
+    - name: Build Release APK (using system Gradle)
       working-directory: .
       run: |
-        ./gradlew clean assembleRelease
-    
-    - name: Build Debug APK
+        gradle clean assembleRelease --no-daemon -Dorg.gradle.jvmargs="-Xmx2048m -XX:MaxMetaspaceSize=512m"
+
+    - name: Build Debug APK (using system Gradle)
       working-directory: .
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug --no-daemon -Dorg.gradle.jvmargs="-Xmx2048m -XX:MaxMetaspaceSize=512m"
     
     - name: Upload APK Artifacts
       uses: actions/upload-artifact@v4
