--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,22 @@
 name: Build Android APK
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Install Gradle (system)
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y gradle
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    
-    - name: Install Android SDK
-      uses: android-actions/setup-android@v2
-    
-    - name: Build APK (simplified: assembleDebug)
-      working-directory: .
-      run: gradle assembleDebug --no-daemon
-    
-    - name: Upload APK Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: apks
-        path: app/build/outputs/apk/debug/app-debug.apk
-    
-    - name: Create Release
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: app/build/outputs/apk/**/*.apk
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        run: |
+          chmod +x gradlew
+          tr -d '\r' < gradlew > gradlew.tmp && mv gradlew.tmp gradlew
+          ./gradlew assembleDebug --no-daemon
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
